--- a/projects/4d-raymarching-pathtracer/devlog.html
+++ b/projects/4d-raymarching-pathtracer/devlog.html
@@ -715,6 +715,10 @@ scene.objects.push_back(Object{boxRRO, glass});</pre>
     We see that the glass hyperbox is blurry in figure 29.
    </p>
    <h2>Preparing for Final Project Submission</h2>
+   <hgroup>
+    <h3>--- Day 19 ---</h3>
+    <span class="right">Aug 03 2025</span>
+   </hgroup>
    <p>
     For the final project submission, I choose to submit 3 scenes, namely the scenes depicted in figures 26, 27, and 30.
    </p>
