--- a/index.html
+++ b/index.html
@@ -27,49 +27,6 @@
   </main>
   <section id="left-col">
    <main>
-    <h2>Articles</h2>
-    <ul class="blank">
-     <li>Jul 02 2025 <a href="./writings/2025-07-02-how-to-walk.html">[How to Walk]</a></li>
-     <li>Jun 30 2025 <a href="./writings/2025-06-30-learning-humanity-from-ants.html">[Learning Humanity from Ants]</a></li>
-     <li>May 07 2025 <a href="./writings/2025-05-07-the-sacred-marigold.html">[The Sacred Marigold]</a></li>
-     <li>Nov 17 2024 <a href="./writings/2024-11-17-paper-lily-chapter-1-review.html">[Paper Lily Chapter 1 Review]</a></li>
-     <li>Nov 02 2024 <a href="./writings/2024-11-02-nier-automata-city-ruins-tab.html">[Nier Automata City Ruins Bass Tab]</a></li>
-     <li>Sep 09 2024 <a href="./writings/2024-09-09-horse-chestnuts.html">[Horse Chestnuts]</a></li>
-    </ul>
-   </main>
-   <main>
-    <h2>Consumed Media</h2>
-    <p>
-     Stars indicate my rating and tags are organized as follows.
-     <ul>
-      <li>Media form: <span class="tag">&lt;game&gt;</span>, <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;manga&gt;</span>, <span class="tag">&lt;poem&gt;</span>, <span class="tag">&lt;film&gt;</span>, <span class="tag">&lt;serial&gt;</span>, <span class="tag">&lt;performance&gt;</span>, <span class="tag">&lt;anime&gt;</span>, <span class="tag">&lt;animation&gt;</span>.</li>
-      <li>Language of Content: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</li>
-     </ul>
-    </p>
-    <br/>
-    <ul class="blank">
-     <li>Jul 24 2025 <em>Look Back</em> by Tatsuki Fujimoto and Studio Durian <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
-     <li>Jul 21 2025 <em>Ghost Trick: Phantom Detective</em> by Capcom <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-     <li>Jul 16 2025 <em>The Coffin of Andy and Leyley</em> by Nemlei <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-     <li>Jul 14 2025 <em>Words Bubble Up Like Soda Pop</em> by Kyohei Ishiguro <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
-     <li>Jul 10 2025 <em>Ranma ½ (2024)</em> by Takahashi Rumiko <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-     <li>Jul 06 2025 <em>KPop Demon Hunters</em> by Chris Appelhans and Maggie Kang <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
-     <li>Jul 05 2025 <em>Surf's Up</em> by Ash Brandon and Chris Buck <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-     <li>Jul 03 2025 <em>Sinners</em> by Ryan Coogler <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
-     <li>Jun 29 2025 <em>Echoes</em> by Koji Narita <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
-     <li>Jun 28 2025 <em>The Amaxing Digital Circus Episode 5</em> by Glitch <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
-     <li>Jun 28 2025 <em>Hunter×Hunter 2011</em> by Madhouse Studios <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-     <li>Feb 23 2025 <em>La Receta de la Felicidad</em> by Deepak Chopra <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;es&gt;</span> <span class="right">****</span></li>
-     <li>Feb 15 2025 <em>Ночь, улится, фонар, аптека</em> by Александр Блок <span class="tag">&lt;poem&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
-     <li>Feb 12 2025 <em>Сама Дура</em> <span class="tag">&lt;serial&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
-     <li>Feb 03 2025 <em>Insomniacs after School</em> by Makoto Ojiro <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">**</span></li>
-     <li>Feb 01 2025 <em>Giselle</em> by the National Ballet of Canada <span class="tag">&lt;performance&gt;</span> <span class="right">***</span></li>
-     <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
-     <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
-     <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
-    </ul>
-   </main>
-   <main>
     <h2>Interesting Sites</h2>
     <h3>Mathematics</h3>
     <ul>
@@ -123,6 +80,39 @@
      <li><a href="https://sadgrl.online/guides/">(sadgirl.online)</a> Guides on how to bypass paywalls and surf the web</li>
     </ul>
    </main>
+   <main>
+    <h2>Consumed Media</h2>
+    <p>
+     Stars indicate my rating and tags are organized as follows.
+     <ul>
+      <li>Media form: <span class="tag">&lt;game&gt;</span>, <span class="tag">&lt;book&gt;</span>, <span class="tag">&lt;manga&gt;</span>, <span class="tag">&lt;poem&gt;</span>, <span class="tag">&lt;film&gt;</span>, <span class="tag">&lt;serial&gt;</span>, <span class="tag">&lt;performance&gt;</span>, <span class="tag">&lt;anime&gt;</span>, <span class="tag">&lt;animation&gt;</span>.</li>
+      <li>Language of Content: <span class="tag">&lt;en&gt;</span>, <span class="tag">&lt;es&gt;</span>, <span class="tag">&lt;ru&gt;</span>.</li>
+     </ul>
+    </p>
+    <br/>
+    <ul class="blank">
+     <li>Aug 08 2025 <em>Flow</em> by Gints Zilbalodis <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 24 2025 <em>Look Back</em> by Tatsuki Fujimoto and Studio Durian <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
+     <li>Jul 21 2025 <em>Ghost Trick: Phantom Detective</em> by Capcom <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 16 2025 <em>The Coffin of Andy and Leyley</em> by Nemlei <span class="tag">&lt;game&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 14 2025 <em>Words Bubble Up Like Soda Pop</em> by Kyohei Ishiguro <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+     <li>Jul 10 2025 <em>Ranma ½ (2024)</em> by Takahashi Rumiko <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 06 2025 <em>KPop Demon Hunters</em> by Chris Appelhans and Maggie Kang <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+     <li>Jul 05 2025 <em>Surf's Up</em> by Ash Brandon and Chris Buck <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Jul 03 2025 <em>Sinners</em> by Ryan Coogler <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+     <li>Jun 29 2025 <em>Echoes</em> by Koji Narita <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+     <li>Jun 28 2025 <em>The Amaxing Digital Circus Episode 5</em> by Glitch <span class="tag">&lt;animation&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">***</span></li>
+     <li>Jun 28 2025 <em>Hunter×Hunter 2011</em> by Madhouse Studios <span class="tag">&lt;anime&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Feb 23 2025 <em>La Receta de la Felicidad</em> by Deepak Chopra <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;es&gt;</span> <span class="right">****</span></li>
+     <li>Feb 15 2025 <em>Ночь, улится, фонар, аптека</em> by Александр Блок <span class="tag">&lt;poem&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+     <li>Feb 12 2025 <em>Сама Дура</em> <span class="tag">&lt;serial&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+     <li>Feb 03 2025 <em>Insomniacs after School</em> by Makoto Ojiro <span class="tag">&lt;manga&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">**</span></li>
+     <li>Feb 01 2025 <em>Giselle</em> by the National Ballet of Canada <span class="tag">&lt;performance&gt;</span> <span class="right">***</span></li>
+     <li>Jan 25 2025 <em>Ёжик в тумане</em> by Yuri Norstein and Soyuzmultfilm <span class="tag">&lt;film&gt;</span> <span class="tag">&lt;ru&gt;</span> <span class="right">***</span></li>
+     <li>Jan 21 2025 <em>the life-changing magic of tidying up - the Japanese art of decluttering and organizing</em> by Marie Kondo <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">****</span></li>
+     <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
+    </ul>
+   </main>
   </section>
   <section id="right-col">
    <main>
@@ -138,10 +128,13 @@
     </ul>
     <h2>Projects</h2>
     <hgroup>
-     <h3>WIP - 4D Raytracing Pathtracer</h3>
+     <h3>4D Raytracing Pathtracer</h3>
      | C++
      <a href="./projects/4d-raymarching-pathtracer/devlog.html">[devlog]</a>
-     <span class="right">July 2025</span>
+     <a href="./projects/4d-raymarching-pathtracer/report.pdf">[report]</a>
+     <a href="./projects/4d-raymarching-pathtracer/render-27.gif">[gif]</a>
+     <a href="./projects/4d-raymarching-pathtracer/render-30.gif">[gif]</a>
+     <span class="right">Jul 2025 - Aug 2025</span>
     </hgroup>
     <ul>
     </ul>
@@ -150,7 +143,7 @@
      | C++
      <a href="./projects/rigid-body-particles/gravity.gif">[gif]</a>
      <a href="./projects/rigid-body-particles/collisions.gif">[gif]</a>
-     <span class="right">July 2025</span>
+     <span class="right">Jul 2025</span>
     </hgroup>
     <ul>
      <li>Created for the CS 488 graphics course at the University of Waterloo</li>
@@ -161,7 +154,7 @@
      | C++
      <a href="./projects/software-rasterizer/cornell-box.png">[png]</a>
      <a href="./projects/software-rasterizer/textured.png">[png]</a>
-     <span class="right">June 2025</span>
+     <span class="right">Jun 2025</span>
     </hgroup>
     <ul>
      <li>Created for the CS 488 graphics course at the University of Waterloo</li>
@@ -174,7 +167,7 @@
      <a href="./projects/software-raytracer/metal-teapot.png">[png]</a>
      <a href="./projects/software-raytracer/glass-teapot.png">[png]</a>
      <a href="./projects/software-raytracer/bunny.png">[png]</a>
-     <span class="right">May 2025 - June 2025</span>
+     <span class="right">May 2025 - Jun 2025</span>
     </hgroup>
     <ul>
      <li>Created for the CS 488 graphics course at the University of Waterloo</li>
