--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
     <tr><th>Other</th><td>-</td><td>(Round)</td></tr>
    </table>
   </main>
-  <section id="left-col">
+  <section id="right-col">
    <main>
     <h2>Interesting Sites</h2>
+    <h3>Computer Graphics</h3>
+    <ul>
+     <li><a href="https://marctenbosch.com/">(Marc Ten Bosch)</a> 4D graphics via publications and blogs</li>
+     <li><a href="https://blog.demofox.org/">(The blog at the bottom of the sea)</a> Graphics, gamedev, computation, audio synthesis</li>
+     <li><a href="https://www.cemyuksel.com/">(Cem Yuksel)</a> Graphics research and teaching</li>
+     <li><a href="https://terathon.com/lengyel/">(Eric Lengyel)</a> Game engines, geometric algebra, and rendering</li>
+     <li><a href="https://iquilezles.org/">(Inigo Quilez)</a> Shadertoy, ray marching, pathtracing, and more</li>
+     <li><a href="https://blog.frost.kiwi/">(Frost Kiwi)</a> Various articles about graphics processing operations</li>
+     <li><a href="https://humus.name/">(Humus)</a> Textures, articles, frameworks, and various graphics examples</li>
+    </ul>
     <h3>Mathematics</h3>
     <ul>
      <li><a href="https://projectivegeometricalgebra.org/">(Projective Geometric Algebra)</a> Webpage that links to <a href="https://conformalgeometricalgebra.org/wiki/">(conformal)</a> and <a href="https://rigidgeometricalgebra.org/wiki/">(rigid)</a> algebra wikis</li>
@@ -35,6 +45,7 @@
      <li><a href="https://artofproblemsolving.com/wiki/index.php/Proofs_without_words">(Proofs without words)</a> Cool visual proofs</li>
      <li><a href="https://imogeometry.blogspot.com/">(Geometry Problems from IMO)</a> Olympiad geometry problems</li>
      <li><a href="https://sites.google.com/site/imocanada/home">(Canada IMO training)</a> Links and resources for IMO training</li>
+     <li><a href="https://web.evanchen.cc/">(Evan Chen)</a> Math competition training, puzzlehunt tips, and more</li>
      <li><a href="https://www.cut-the-knot.org/">(Cut the Knot)</a> A large number of mathematical puzzles</li>
     </ul>
     <h3>Computer Science</h3>
@@ -43,22 +54,26 @@
      <li><a href="https://github.com/dylanaraps/pure-sh-bible">(pure sh bible)</a> and <a href="https://github.com/dylanaraps/pure-bash-bible">(pure bash bible)</a> Pure shell code instead of external process invokation</li>
      <li><a href="https://github.com/codecrafters-io/build-your-own-x">(Build Your Own X)</a> Learn to build a regex engine, OS, text editor, and much more</li>
      <li><a href="https://herbie.uwplse.org/">(The Herbie Project)</a> Restructure floating point operations to reduce inaccuracy</li>
-     <li><a href="https://marctenbosch.com/">(Marc Ten Bosch)</a> 4D graphics via publications and blogs</li>
-     <li><a href="https://blog.demofox.org/">(The blog at the bottom of the sea)</a> Graphics, gamedev, computation, audio synthesis</li>
-     <li><a href="https://www.cemyuksel.com/">(Cem Yuksel)</a> Graphics research and teaching</li>
-     <li><a href="https://terathon.com/lengyel/">(Eric Lengyel)</a> Game engines, geometric algebra, and rendering</li>
-     <li><a href="https://iquilezles.org/">(Inigo Quilez)</a> Shadertoy, ray marching, pathtracing, and more</li>
     </ul>
     <h3>Search Engines</h3>
     <ul>
+     <li><a href="https://4get.ca/">(4get)</a> Private, light, ad-free, free metasearch engine</li>
      <li><a href="https://www.qwant.com/">(Qwant)</a> Private search engine with independent search indexing</li>
      <li><a href="https://wiby.me/">(wiby.me)</a> Search engine for personalized webpages and sites for hobbyists</li>
      <li><a href="https://docs.searxng.org/">(searXNG)</a> Free metasearch engine (accumulates results from multiple engines)</li>
+     <li><a href="https://nutrimatic.org/">(nutrimatic)</a> Word matching to a pattern according to frequency</li>
+    </ul>
+    <h3>Art</h3>
+    <ul>
+     <li><a href="https://drawabox.com/">(Draw a Box)</a> Art fundamentals for building spatial reasoning</li>
+     <li><a href="https://line-of-action.com/">(Line of Action)</a> Reference photos for human poses, animals, hands and feet, faces, and more</li>
+     <li><a href="https://lospec.com/">(Lospec)</a> Colour palettes and pixel art</li>
     </ul>
     <h3>Games</h3>
     <ul>
      <li><a href="https://www.puzzle-bridges.com/">(Puzzle Games)</a> Galaxies, Hashi, Star Battle, and much more</li>
      <li><a href="https://gungi.io/">(Gungi.io)</a> Gungi, if you have a friend to play with</li>
+     <li><a href="https://toybox.toms.toys/">(Tom's Toys)</a> A collection of interesting small toys and games</li>
     </ul>
     <h3>File Sharing</h3>
     <ul>
@@ -71,15 +86,16 @@
      <li><a href="https://pianobin.com/">(pianobin)</a> Piano sheet music for Paper Lily, Omori, TCOAL, and more</li>
      <li><a href="https://tanarang.com/">(Tanarang)</a> Collection of various Indian ragas</li>
     </ul>
-    <h3>Miscellanous</h3>
+    <h3>See others</h3>
     <ul>
      <li><a href="https://lukesmith.xyz/">(Luke Smith's Webpage)</a> Philosophy, unix, and linguistics</li>
-     <li><a href="https://lospec.com/">(Lospec)</a> Colour palettes and pixel art</li>
+     <li><a href="https://sizeof.cat/">(sizeof.cat)</a> Articles, links, and projects related to programming, minimalism, and more</li>
      <li><a href="https://github.com/cat-milk/Anime-Girls-Holding-Programming-Books">(Anime Girls Holding Programming Books)</a> A Github repository of such images</li>
      <li><a href="https://owlsintowels.org/">(Owls in Towels)</a> A site dedicated to owls in towels</li>
      <li><a href="https://sadgrl.online/guides/">(sadgirl.online)</a> Guides on how to bypass paywalls and surf the web</li>
     </ul>
    </main>
+   <!--
    <main>
     <h2>Consumed Media</h2>
     <p>
@@ -113,8 +129,9 @@
      <li>Dec 31 2024 <em>Braiding Sweetgrass</em> by Robin Wall Kimmerer <span class="tag">&lt;book&gt;</span> <span class="tag">&lt;en&gt;</span> <span class="right">*****</span></li>
     </ul>
    </main>
+   -->
   </section>
-  <section id="right-col">
+  <section id="left-col">
    <main>
     <h2>Publications</h2>
     <hgroup>
@@ -134,9 +151,14 @@
      <a href="./projects/4d-raymarching-pathtracer/report.pdf">[report]</a>
      <a href="./projects/4d-raymarching-pathtracer/render-27.gif">[gif]</a>
      <a href="./projects/4d-raymarching-pathtracer/render-30.gif">[gif]</a>
+     <a href="https://github.com/arnavcs/4d-raymarching-pathtracer">{Github}</a>
      <span class="right">Jul 2025 - Aug 2025</span>
     </hgroup>
     <ul>
+     <li>A CPU pathtracer writen in C++ that writes renders to GIF, created as a final project for CS 488</li>
+     <li>Employs SDF raymarching in 4D space with pathtracing to contruct video renders of the scene</li>
+     <li>Every frame in the capture, the camera sends out rays into a 3D affine subspace of the 4D space, which can exit the subspace upon scattering at a surface</li>
+     <li>Implemented a powerful material system with microfacet BRDFs, glass, volumetric fog, and more with the ability to assign more than one material to a geometry</li>
     </ul>
     <hgroup>
      <h3>Rigid-body Particle Simulation</h3>
