--- a/projects/4d-raymarching-pathtracer/devlog.html
+++ b/projects/4d-raymarching-pathtracer/devlog.html
@@ -9,6 +9,7 @@
    <hgroup><a href="../../index.html">[Arnav Kumar]</a> / <h1>4D Raymarching Pathtracer Devlog</h1></hgroup>
   </header>
   <main>
+   <p>Update: code is now uploaded on <a href="https://github.com/arnavcs/4d-raymarching-pathtracer">{Github}</a>.</p>
    <h2>4D Camera and GIF output</h2>
    <hgroup>
     <h3>--- Day 01 ---</h3>
