--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </ul>
     <h2>Projects</h2>
     <hgroup>
-     <h3>4D Raytracing Pathtracer</h3>
+     <h3>4D Raymarching Pathtracer</h3>
      | C++
      <a href="./projects/4d-raymarching-pathtracer/devlog.html">[devlog]</a>
      <a href="./projects/4d-raymarching-pathtracer/report.pdf">[report]</a>
